# snapmind

./: package.json
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
backend/models/: blip_clip.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: AuroraBackground.tsx  CategoryGrid.tsx  HeroSection.tsx  Navbar.tsx
frontend/app/upload/: page.tsx
