[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "transformers",
    "uvicorn>=0.35.0",
]
